files/examples/error/decl_missing.t
def main():
    def a():
        b()
    end
    def b():
        a()
    end
end